[package]
name = "nx-cache-server"
version = "1.2.0-dev.1"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
prometheus = "0.14.0"
tower-http = { version = "0.6", features = ["timeout", "trace"] }
sha2 = "0.11.0"
subtle = "2"
hex = "0.4"
bytes = "1"
async-trait = "0.1"
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure"] }
kube = { version = "3.1.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
